nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nextcloud
  name: nextcloud-service
  namespace: nextcloud
spec:
  ports:
    - name: http-nextcloud
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app: nextcloud
  sessionAffinity: None
  type: ClusterIP

# ---

# apiVersion: v1
# kind: Service
# metadata:
#   labels:
#     app: nextcloud
#   name: nextcloud-service-lb
#   namespace: nextcloud
#   annotations:
#     metallb.universe.tf/loadBalancerIPs: 192.168.11.17
# spec:
#   ports:
#     - name: http-nextcloud
#       port: 9000
#       protocol: TCP
#       targetPort: 9000
#   selector:
#     app: nextcloud
#   sessionAffinity: None
#   type: LoadBalancer
